@@ -1,3 +1,13 @@
+2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/misc.c (GrabEm):
+	confine the pointer to the root window when grabbed
+
+2002-11-28  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (__get_stacking_sibling):
+	fixed icons on top of all other windows after a restart
+
 2002-11-26  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/fvwm.c (InitVariables):
